# 2025_AnSeqDa

./: .gitignore  Labo1_Questions-2025.ipynb  main.py  pyproject.toml  sales_daily.csv  sales_daily_features.csv  stock_data.csv  tutoriel.ipynb
lab1/: Labo1_Questions-2025.ipynb
lab2/: Lab2_Questions.ipynb  SNS_1.csv  SNS_2.csv
lab3/: Lab3_Questions.ipynb  auto_1.csv
lab3/.ipynb_checkpoints/: Lab3_Answers-checkpoint.ipynb  Lab3_Questions-checkpoint.ipynb
lab4/: Lab4_Questions.ipynb
lab6/: Lab6_Questions.ipynb  auto_2.csv
lab6/.ipynb_checkpoints/: Lab6_Questions-checkpoint.ipynb  Lab6_Solution_ARCH_GARCH-checkpoint.ipynb  Labo6_Questions-checkpoint.ipynb
